# workflow

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  claude_desktop_config.example.json  doctor.ps1
.github/workflows/: release.yml
docs/: getting-started.md  per_machine_setup.md
examples/: api_pattern_replay.md  credential_storage.md  graduation_pipeline.md
skills/: workflow-recommended-instructions.md  workflow.md
skills/workflow/: skill.md
skills/workflow-getting-started/: SKILL.md
src/: api_store.rs  credential.rs  dashboard_endpoint.rs  dpapi_legacy.rs  flow.rs  keyring_store.rs  main.rs  main.rs.20260408_154328.bak  migrate.rs  pipe.rs  storage.rs  totp.rs  watch.rs  workflow.rs
