[package]
name = "workflow"
version = "0.1.0"
edition = "2021"
description = "Workflow orchestration: API discovery storage, flow recording/replay, credential vault, scheduled watches"

[[bin]]
name = "workflow"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1.6", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
directories = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Credentials",
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }
